# sherpa-onnx

./: .gitignore  README.md
audios/: hanli.txt
cxx-api-examples/: CMakeLists.txt  build_static_sensevoice_streaming_wrapper.sh  check_dependencies.py  exports.map  python_example.py  python_multi_session_example.py  sense-voice-cxx-api.cc  sense-voice-streaming-wrapper.cc
